--- a/pages/blogs/model-based-deep-learning.mdx
+++ b/pages/blogs/model-based-deep-learning.mdx
@@ -4,7 +4,7 @@ title: 🚀 Model Based Deep Learning
 
 # Model-Based Deep Learning: On the Intersection of Deep Learning and Optimization
 
-Summary of the paper [Model-Based Deep Learning: On the Intersection of Deep Learning and Optimization published in IEEE Signal Processing Magazine](https://arxiv.org/abs/2205.02640s)
+Summary of the paper [Model-Based Deep Learning: On the Intersection of Deep Learning and Optimization published in IEEE Signal Processing Magazine](https://arxiv.org/abs/2205.02640)
 
 ## Introduction
 
@@ -490,7 +490,7 @@ To dive deeper into hybrid model-based deep learning, the following resources ca
 
 ### Key Papers and Books
 
-1. **Foundational Paper:** “[Model-Based Deep Learning: On the Intersection of Deep Learning and Optimization](https://arxiv.org/abs/2205.02640s)” by Shlezinger, Eldar, and Boyd.
+1. **Foundational Paper:** “[Model-Based Deep Learning: On the Intersection of Deep Learning and Optimization](https://arxiv.org/abs/2205.02640)” by Shlezinger, Eldar, and Boyd.
    - Explains the core principles and methodologies of hybrid approaches.
 2. **Deep Unfolding:** “[Learned ISTA: Deep Unfolding for Sparse Recovery](https://yann.lecun.com/exdb/publis/pdf/gregor-icml-10.pdf)” by Gregor and LeCun.
    - Introduces deep unfolding as a hybrid approach to iterative optimization.
