--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -3,9 +3,10 @@ title: Main
 ---
 
 import { Blog } from "./../components/Blog";
+import { ThemeSwitch } from "nextra-theme-docs";
 
+<ThemeSwitch />
 # Welcome to my blog!
 
 Here you will be able to find recent blog post
-
 <Blog />
