refactor: conceptual map added

--- a/pages/blogs/model-based-deep-learning.mdx
+++ b/pages/blogs/model-based-deep-learning.mdx
@@ -4,6 +4,7 @@ title: 🚀 Model Based Deep Learning
 
 # Model-Based Deep Learning: On the Intersection of Deep Learning and Optimization
 **Summary of the paper [Model-Based Deep Learning: On the Intersection of Deep Learning and Optimization published in IEEE Signal Processing Magazine](https://arxiv.org/abs/2205.02640), 2022, by [Nir Shlezinger](https://arxiv.org/search/eess?searchtype=author&query=Shlezinger,+N), [Yonina C. Eldar](https://arxiv.org/search/eess?searchtype=author&query=Eldar,+Y+C), and [Stephen Boyd](https://arxiv.org/search/eess?searchtype=author&query=Boyd,+S+P).**
+- ![image-1](../../images/blog-model-based-deep-learning/image-1.png)
 
 
 ## 1.0 Introduction
